fixed modal not showing bug

--- a/style.css
+++ b/style.css
@@ -115,17 +115,17 @@ button:focus{
 
 
 .modal-container{
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.6);
     display: none;
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
     bottom: 0;
 }
 
 .modal-container.show-modal{
     display: block;
-    opacity: 1;
 }
 
 .modal{
@@ -181,7 +181,7 @@ button:focus{
     right: 0;
 }
 
-@keyframes modalopen{
+@keyframes modalopen {
     from{
         opacity: 0;
     }
